--- a/package.json
+++ b/package.json
@@ -1,32 +1,29 @@
 {
-  "name": "countdown-timer",
+  "name": "countdown-examples",
   "version": "0.2.1",
-  "description": "A customised countdown timer.",
+  "description": "Examples to compliment CountdownComponent.",
   "author": "Jonathan Blades",
   "license": "MIT",
-  "source": "src/index.html",
+  "source": "src/example/index.pug",
   "type": "module",
   "scripts": {
     "clean:dist": "rimraf dist",
     "clean:dist-serve": "rimraf dist-serve",
-    "start": "npm run clean:dist-serve && parcel serve src/index.pug src/robots.txt --dist-dir dist-serve --port 1236",
-    "build": "npm run clean:dist && parcel build src/index.pug src/robots.txt --no-source-maps --public-url /countdown-timer",
+    "start": "npm run clean:dist-serve && parcel serve src/example/index.pug src/example/robots.txt --dist-dir dist-serve --port 1236",
+    "build": "npm run clean:dist && parcel build src/example/index.pug src/example/robots.txt --no-source-maps --public-url /countdown-timer",
     "test": "jest"
   },
-  "browserslist": "defaults and supports es6-module",
+  "browserslist": "> 0.5%, last 2 versions, not dead",
   "devDependencies": {
     "@parcel/transformer-pug": "2.8.0",
     "@parcel/transformer-sass": "2.8.0",
-    "@types/jest": "^29.1.2",
-    "jest": "^29.1.2",
-    "jest-environment-jsdom": "^29.1.2",
     "parcel": "^2.8.0",
     "rimraf": "^3.0.2",
-    "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@bladeski/countdown-timer": "^1.0.0",
     "@types/canvas-confetti": "^1.4.3",
     "canvas-confetti": "^1.6.0"
   }
