--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "clean:dist": "rimraf dist",
     "clean:dist-serve": "rimraf dist-serve",
     "start": "npm run clean:dist-serve && parcel serve src/index.pug src/robots.txt --dist-dir dist-serve --port 1236",
-    "build": "npm run clean:dist && parcel build src/index.pug src/robots.txt --no-source-maps --public-url /lego-club",
-    "test": "jest"
+    "build": "npm run clean:dist && parcel build src/index.pug src/robots.txt --no-source-maps --public-url /lego-club"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "devDependencies": {
