--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,6 +21,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Run yarn install
         run: yarn install
+      - name: Run Prettier
+        run: yarn prettier
+      - name: Run ESLint
+        run: yarn eslint
       - name: Run yarn test
         run: yarn run test
       - name: Report LCOV
